[FIX] website_slides: make text readable in white navigation bar
The navigation bar inside the Courses main page and the courses list
are forced to white with an inline style.
When a dark palette is used it makes the text color white as well.
Because of this the texts in those navigation bars cannot be read
anymore.

This commit resets the navigation link colors when the background is
forced to white.

Steps to reproduce:
- Pick a dark palette.
- Go to the "Courses" page.
=> "All courses" and its icon were not visible anymore.

task-2855511

--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -94,6 +94,19 @@ $o-wslides-fs-side-width: 300px;
     .o_wslides_home_nav {
         top: -40px;
 
+        // TODO Remove me in master
+        [style*="background: white"] .nav-link {
+            color: $navbar-light-color !important;
+
+            @include hover-focus {
+                color: $navbar-light-hover-color !important;
+            }
+
+            &.disabled {
+                color: $navbar-light-disabled-color !important;
+            }
+        }
+
         @include media-breakpoint-up(lg) {
             font-size: 1rem;
 
